# RogueSquadran

./: 2vids_test1.avi  READTHIS  ffvideo_rec_script  fmpeg_history_nov14  newmerge  rec_2vid-2-1_nov12  test.c
GUVCVIEW/: hist.txt  history.txt
GUVCVIEW/guvcview-src-1.7.1/: Makefile  Makefile.in  aclocal.m4  config.cache  config.h  config.status  configure  ffmpeg.help
SnowMix/Snowmix-0.4.2/: AUTHORS  ChangeLog  HOWTO-Commands  HOWTO-Text_on_mixer_output  Makefile  Makefile.am  Makefile.in  NEWS  README  ReleaseNotes  TODO  bootstrap  config.status  configure  configure.ac  libtool  strapboot
SnowMix/Snowmix-0.4.2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
SnowMix/Snowmix-0.4.2/frames/: dead-1024x576.argb  dead-704x576.argb  make_frame
SnowMix/Snowmix-0.4.2/ini/: Clock  DigitalClock  DigitalCounter  DigitalMeter  audio  basic_feeds  basis  intercom  mosaic-basis  saphire-DigitalCounter  saphire-DigitalMeter  saphire-Radar  saphire-shape  sapphire-audio  sapphire-basis  sapphire-clocks  sapphire-feeds  sapphire-scenes  sapphire-texts  shape-test  text_tutorial  tm65-shape  tm65-virtual_feeds  tm65-virtual_feeds-720p  virtual_feeds  virtual_feeds_2
SnowMix/Snowmix-0.4.2/ini/old/: base-1024x576  mixer1-1024x576.ini  mixer1-1280x720.ini  mixer1-main.ini  test  tm65-virtual_feeds  virtual_feeds_2
SnowMix/Snowmix-0.4.2/scripts/: 720pfile  ais_simulation  audio  av_output2screen  axis1-768  axis2-768  axis3-768  bonecam1024  cameras  demo  get_config  input2feed  intercom  intercomclient  iphone  output2dummy  output2file  output2rtp  output2screen  output2tcp  output2tcp2  pmm  pmm-720p  pmm2  rtp4feed4-1024  rtp4feed4-1024-b  rtp4feed4-1024-c  saphire_simulation  saphire_simulation2  steenmix  test  test1  tmp
SnowMix/Snowmix-0.4.2/slib/: basic-shapes.slib  clocks.slib  feeds.slib  graphs.slib  radar.slib  scenes.slib
SnowMix/Snowmix-0.4.2/src/: .audio_feed.cpp.swp  Makefile  Makefile.am  Makefile.in  audio_feed.cpp  audio_feed.h  audio_feed.lo  audio_mixer.cpp  audio_mixer.h  audio_mixer.lo  audio_sink.cpp  audio_sink.h  audio_sink.lo  audio_util.cpp  audio_util.h  audio_util.lo  bars  cairo_graphic.cpp  cairo_graphic.h  cairo_graphic.lo  command.cpp  command.h  command.lo  controller.cpp  controller.h  controller.lo  ctrisaudio  ctrisaudio.cpp  libsnowmix.la  main.cpp  monitor.cpp  monitor.h  monitor.lo  pmm1  snowmix  snowmix.h  tcl_interface.cpp  tcl_interface.h  tcl_interface.lo  version.h  (+21 more)
SnowMix/Snowmix-0.4.2/src/.deps/: audio_feed.Plo  audio_mixer.Plo  audio_sink.Plo  audio_util.Plo  bars.Po  cairo_graphic.Plo  command.Plo  controller.Plo  main.Po  monitor.Plo  tcl_interface.Plo  video_feed.Plo  video_image.Plo  video_mixer.Plo  video_scaler.Plo  video_shape.Plo  video_text.Plo  virtual_feed.Plo
SnowMix/Snowmix-0.4.2/src/.libs/: libsnowmix.la
SnowMix/Snowmix-0.4.2/src/mesa/: slider  slider.c
SnowMix/Snowmix-0.4.2/tcl/: audio.tcl  scenes.tcl  shapeinfo  shapes.tcl  snowcub.tcl  special.tcl  test  texts.tcl  time.tcl  video.tcl
SnowMix/Snowmix-0.4.2/xinetd/: xinetd-audio-feed  xinetd-video-feed
ffmpeg-1.2.4/: config.asm  config.fate  config.h  config.mak  ffplay.d
ffmpeg-1.2.4/doc/: ffmpeg-bitstream-filters.1  ffmpeg-codecs.1  ffmpeg-codecs.pod  ffmpeg-devices.1  ffmpeg-filters.1  ffmpeg-formats.1  ffmpeg-formats.pod  ffmpeg-protocols.1  ffmpeg-resampler.1  ffmpeg-scaler.1  ffmpeg-utils.1  ffmpeg.1  ffplay.1  ffplay.pod  ffplay.pod.d  ffprobe.1  ffserver.1  libavcodec.3  libavdevice.3  libavfilter.3  libavformat.3  libavutil.3  libswresample.3  libswscale.3  print_options
ffmpeg-1.2.4/libavcodec/: 012v.d  4xm.d  8bps.d  8svx.d  a64multienc.d  aac_ac3_parser.d  aac_adtstoasc_bsf.d  aac_parser.d  aacadtsdec.d  aaccoder.d  aacdec.d  aacenc.d  aacps.d  (+523 more)
(+590 files in other folders)
